Adicionado a opção para abrir todas as contas ao mesmo tempo. Adicionado uma opção para utilizar um executável custom do element_client.

--- a/Perfect Launcher/App.config
+++ b/Perfect Launcher/App.config
@@ -1,49 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Perfect_Launcher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Perfect_Launcher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <userSettings>
         <Perfect_Launcher.Properties.Settings>
-            <setting name="User" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string />
-                    </ArrayOfString>
-                </value>
-            </setting>
-            <setting name="Passwd" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string />
-                    </ArrayOfString>
-                </value>
-            </setting>
-            <setting name="Classe" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string />
-                    </ArrayOfString>
-                </value>
-            </setting>
             <setting name="bFirstRun" serializeAs="String">
                 <value>True</value>
-            </setting>
-            <setting name="ComboQueue" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string />
-                    </ArrayOfString>
-                </value>
             </setting>
             <setting name="Interval1" serializeAs="String">
                 <value>1150</value>
@@ -72,35 +40,11 @@
             <setting name="LastCheckup" serializeAs="String">
                 <value />
             </setting>
-            <setting name="DailyCheckups" serializeAs="Xml">
-                <value>
-                    <ArrayOfBoolean xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <boolean>false</boolean>
-                        <boolean>false</boolean>
-                        <boolean>false</boolean>
-                        <boolean>false</boolean>
-                        <boolean>false</boolean>
-                        <boolean>false</boolean>
-                        <boolean>false</boolean>
-                        <boolean>false</boolean>
-                        <boolean>false</boolean>
-                        <boolean>false</boolean>
-                        <boolean>false</boolean>
-                    </ArrayOfBoolean>
-                </value>
-            </setting>
             <setting name="bCheckedForUpdates" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="CrashWatchInterval" serializeAs="String">
                 <value>1250</value>
-            </setting>
-            <setting name="UsersBeforeClosing" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
-                </value>
             </setting>
             <setting name="LastGlobalUpdate" serializeAs="String">
                 <value />
@@ -119,6 +63,60 @@
             </setting>
             <setting name="ContaAnteriorBtn" serializeAs="String">
                 <value>7</value>
+            </setting>
+            <setting name="User" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string />
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="Passwd" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string />
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="Classe" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string />
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="ComboQueue" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string />
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="DailyCheckups" serializeAs="Xml">
+                <value>
+                    <ArrayOfBoolean xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+                        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <boolean>false</boolean>
+                        <boolean>false</boolean>
+                        <boolean>false</boolean>
+                        <boolean>false</boolean>
+                        <boolean>false</boolean>
+                        <boolean>false</boolean>
+                        <boolean>false</boolean>
+                        <boolean>false</boolean>
+                        <boolean>false</boolean>
+                        <boolean>false</boolean>
+                        <boolean>false</boolean>
+                    </ArrayOfBoolean>
+                </value>
+            </setting>
+            <setting name="UsersBeforeClosing" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" />
+                </value>
+            </setting>
+            <setting name="ExecutavelCustom" serializeAs="String">
+                <value />
             </setting>
         </Perfect_Launcher.Properties.Settings>
     </userSettings>
