--- a/Perfect Launcher/Properties/Settings.settings
+++ b/Perfect Launcher/Properties/Settings.settings
@@ -2,32 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Perfect_Launcher.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="User" Type="System.Collections.Specialized.StringCollection" Scope="User">
-      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string /&gt;
-&lt;/ArrayOfString&gt;</Value>
-    </Setting>
-    <Setting Name="Passwd" Type="System.Collections.Specialized.StringCollection" Scope="User">
-      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string /&gt;
-&lt;/ArrayOfString&gt;</Value>
-    </Setting>
-    <Setting Name="Classe" Type="System.Collections.Specialized.StringCollection" Scope="User">
-      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string /&gt;
-&lt;/ArrayOfString&gt;</Value>
-    </Setting>
     <Setting Name="bFirstRun" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
-    </Setting>
-    <Setting Name="ComboQueue" Type="System.Collections.Specialized.StringCollection" Scope="User">
-      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string /&gt;
-&lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="Interval1" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1150</Value>
@@ -56,31 +32,11 @@
     <Setting Name="LastCheckup" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="DailyCheckups" Type="System.Boolean[]" Scope="User">
-      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;ArrayOfBoolean xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;boolean&gt;false&lt;/boolean&gt;
-  &lt;boolean&gt;false&lt;/boolean&gt;
-  &lt;boolean&gt;false&lt;/boolean&gt;
-  &lt;boolean&gt;false&lt;/boolean&gt;
-  &lt;boolean&gt;false&lt;/boolean&gt;
-  &lt;boolean&gt;false&lt;/boolean&gt;
-  &lt;boolean&gt;false&lt;/boolean&gt;
-  &lt;boolean&gt;false&lt;/boolean&gt;
-  &lt;boolean&gt;false&lt;/boolean&gt;
-  &lt;boolean&gt;false&lt;/boolean&gt;
-  &lt;boolean&gt;false&lt;/boolean&gt;
-&lt;/ArrayOfBoolean&gt;</Value>
-    </Setting>
     <Setting Name="bCheckedForUpdates" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="CrashWatchInterval" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1250</Value>
-    </Setting>
-    <Setting Name="UsersBeforeClosing" Type="System.Collections.Specialized.StringCollection" Scope="User">
-      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" /&gt;</Value>
     </Setting>
     <Setting Name="LastGlobalUpdate" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
@@ -99,6 +55,53 @@
     </Setting>
     <Setting Name="ContaAnteriorBtn" Type="System.SByte" Scope="User">
       <Value Profile="(Default)">7</Value>
+    </Setting>
+    <Setting Name="User" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;string /&gt;
+&lt;/ArrayOfString&gt;</Value>
+    </Setting>
+    <Setting Name="Passwd" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;string /&gt;
+&lt;/ArrayOfString&gt;</Value>
+    </Setting>
+    <Setting Name="Classe" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;string /&gt;
+&lt;/ArrayOfString&gt;</Value>
+    </Setting>
+    <Setting Name="ComboQueue" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;string /&gt;
+&lt;/ArrayOfString&gt;</Value>
+    </Setting>
+    <Setting Name="DailyCheckups" Type="System.Boolean[]" Scope="User">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfBoolean xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;boolean&gt;false&lt;/boolean&gt;
+  &lt;boolean&gt;false&lt;/boolean&gt;
+  &lt;boolean&gt;false&lt;/boolean&gt;
+  &lt;boolean&gt;false&lt;/boolean&gt;
+  &lt;boolean&gt;false&lt;/boolean&gt;
+  &lt;boolean&gt;false&lt;/boolean&gt;
+  &lt;boolean&gt;false&lt;/boolean&gt;
+  &lt;boolean&gt;false&lt;/boolean&gt;
+  &lt;boolean&gt;false&lt;/boolean&gt;
+  &lt;boolean&gt;false&lt;/boolean&gt;
+  &lt;boolean&gt;false&lt;/boolean&gt;
+&lt;/ArrayOfBoolean&gt;</Value>
+    </Setting>
+    <Setting Name="UsersBeforeClosing" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" /&gt;</Value>
+    </Setting>
+    <Setting Name="ExecutavelCustom" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
